samples/_failures_safe/1761321644_4ec6b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c73e879.c: In function ‘main’:
./samples/SAFE/__tmp_9c73e879.c:170:9: error: expected expression at end of input
  170 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_9c73e879.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9c73e879.c:170:9: error: expected declaration or statement at end of input
